# CervicalCancer-HPC

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
include/: preprocess.h
models/: cancer_detector_norm.onnx
scripts/: benchmark_cpu.py
src/: .gitignore  main.cpp  main_benchmark.cpp  main_demo.cpp  preprocess.cu
